force-app/main/default/objects/Apttus_Config2__GuidedSearchRule__c/Apttus_Config2__GuidedSearchRule__c.object-meta.xml
<CustomObject>
    <description>Represents a rule to search for products based on a guided interview</description>
    <label>Guided Selling Rule</label>
    <nameField>
        <label>Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Guided Selling Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>