force-app/main/default/objects/Apttus_Config2__GuidedSearchRule__c/fields/Apttus_Config2__BusinessObject__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__BusinessObject__c</fullName>
    <description>The business object which provides the context for the rule</description>
    <label>Business Object</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Product2</fullName>
                <default>true</default>
                <label>Product2</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>