force-app/main/default/objects/Apttus_Config2__GuidedSearchRule__c/fields/Apttus_Config2__ClassificationId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ClassificationId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Category Hierarchy</label>
    <referenceTo>Apttus_Config2__ClassificationHierarchy__c</referenceTo>
    <relationshipLabel>Guided Selling Rules</relationshipLabel>
    <relationshipName>GuidedSellingRules</relationshipName>
    <type>Lookup</type>
</CustomField>