force-app/main/default/objects/Apttus_Config2__GuidedSearchRule__c/fields/Apttus_Config2__GuidedQuestion3Id__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__GuidedQuestion3Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the third guided question.</description>
    <label>Guided Question 3</label>
    <referenceTo>Apttus_Config2__GuidedQuestion__c</referenceTo>
    <relationshipName>GuidedSearchRules3</relationshipName>
    <type>Lookup</type>
</CustomField>