force-app/main/default/objects/Apttus_Config2__GuidedSearchRule__c/fields/Apttus_Config2__GuidedQuestion4Id__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__GuidedQuestion4Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the fourth guided question.</description>
    <label>Guided Question 4</label>
    <referenceTo>Apttus_Config2__GuidedQuestion__c</referenceTo>
    <relationshipName>GuidedSearchRules4</relationshipName>
    <type>Lookup</type>
</CustomField>