force-app/main/default/objects/Apttus_Config2__GuidedSearchRule__c/fields/Apttus_Config2__InterviewName__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__InterviewName__c</fullName>
    <description>The name of the guided interview</description>
    <label>Interview Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>