force-app/main/default/objects/Apttus_Config2__GuidedSearchRule__c/fields/Apttus_Config2__RuleType__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__RuleType__c</fullName>
    <description>The rule type</description>
    <label>Rule Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Question</fullName>
            </value>
            <value>
                <fullName>Filter Set</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>